adding site.url

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -19,10 +19,10 @@
 
     {% if page.image %}
     <meta property="og:image" content="{{ site.url }}{{ page.image }}">
-  {% endif %}
+    {% endif %}
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ "/assets/stylesheets/style.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{site.url}}/assets/stylesheets/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- SEO -->
