--- a/src/_includes/video.html
+++ b/src/_includes/video.html
@@ -1,6 +1,6 @@
 {% assign video = include.param %}
 <div id="video" style="width: 100%; height: 90vh;"
-  data-vide-bg="m4v: {{site.url}}{{ video.videoLocation }}, webm: {{site.url}}/{{ video.videoLocation }}, ogv: {{site.url}}/{{ video.videoLocation }}, poster: {{site.url}}/{{ video.videoLocation }}"
+  data-vide-bg="m4v: {{ video.videoLocation }}, webm: {{ video.videoLocation }}, ogv: {{ video.videoLocation }}, poster: {{ video.videoLocation }}"
   data-vide-options="posterType: jpg, autoplay: true, loop: true, muted: true, position: 50% 50%, resizing: true, bgColor: transparent">
   <div class="video__content">
     <h1 class="title">{{ video.title }}</h1>
