--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -21,8 +21,9 @@
     <meta property="og:image" content="{{ site.url }}{{ page.image }}">
     {% endif %}
 
+
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/stylesheets/style.css">
+  <link rel="stylesheet" href="{{ site.url }}/assets/stylesheets/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- SEO -->
