--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -13,8 +13,8 @@
     <!-- JavaScript External -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- JavaScript Internal NEW-->
-    <script src="assets/javascript/menu.js"></script>
-    <script src="assets/javascript/jquery.vide.min.js"></script>
+    <script src="{{site.url}}/assets/javascript/menu.js"></script>
+    <script src="{{site.url}}/assets/javascript/jquery.vide.min.js"></script>
 
   </body>
 </html>
