--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -4,7 +4,7 @@
   {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
   {% for page in pages %}
     <li>
-      <a href="{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a>
+      <a href="{{ site.url }}{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a>
     </li>
   {% endfor %}
   </ul>
