--- a/src/_includes/section-teaser.html
+++ b/src/_includes/section-teaser.html
@@ -4,7 +4,7 @@
     <div class="section-teaser col-md-6">
       <h1 class="title {{ node.title_variantClasses }}">{{ node.title }}</h1>
       <div class="text">{{ node.body | markdownify }}</div>
-      <a href="{{ node.buttonLink }}" class="btn btn-primary {{ node.buttonVariantClasses }}">{{ node.buttonText }}</a>
+      <a href="{{ site.url }}{{ node.buttonLink }}" class="btn btn-primary {{ node.buttonVariantClasses }}">{{ node.buttonText }}</a>
     </div>
     <div class="section-teaser col-md-6">
       <div class="image"><img src="{{ node.image }}"></div>
