leaving for snow

--- a/src/_includes/section-teaser.html
+++ b/src/_includes/section-teaser.html
@@ -7,7 +7,7 @@
       <a href="{{ site.url }}{{ node.buttonLink }}" class="btn btn-primary {{ node.buttonVariantClasses }}">{{ node.buttonText }}</a>
     </div>
     <div class="section-teaser col-md-6">
-      <div class="image"><img src="{{ node.image }}"></div>
+      <div class="image"><img class="img-fluid" src="{{ node.image }}"></div>
     </div>
   </div>
 </div>
