--- a/src/_includes/slice.html
+++ b/src/_includes/slice.html
@@ -7,7 +7,7 @@
       <div class="text">{{ node.body | markdownify }}</div>
     </div>
     <div class="slice__image col-md-6">
-      <div class="image"><img src="{{ node.image }}"></div>
+      <div class="image"><img class="img-fluid" src="{{ node.image }}"></div>
     </div>
   </div>
 </div>
