--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,10 +4,14 @@
   {% include head.html %}
 
   <body>
-    {{ content }}
+    <div class="container-fluid">
+        <div class="row">
+          {{ content }}
+        </div>
+    </div>
 
     {% include header.html %}
-
+    
     {% include footer.html %}
 
     <!-- JavaScript External -->
