--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,70 @@
 <footer class="footer">
-  <div class="container">
-    Copyright ...
+  <div class="container-fluid">
+    <div class="row">
+      <div class="container">
+        <div class="row">
+          <div class="footer__item col-sm-6 col-lg-3">
+            <h2 class="title title--block">
+              Insights
+            </h2>
+            <ul>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li></ul>
+          </div>
+          <div class="footer__item col-sm-6 col-lg-3">
+            <h2 class="title title--block">
+              Insights
+            </h2>
+            <ul>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li></ul>
+          </div>
+          <div class="footer__item col-sm-6 col-lg-3">
+            <h2 class="title title--block">
+              Insights
+            </h2>
+            <ul>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li></ul>
+          </div>
+          <div class="footer__item col-sm-6 col-lg-3">
+            <h2 class="title title--block">
+              Insights
+            </h2>
+            <ul>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li>
+            <li>
+              <a href=#>Company</a>
+            </li></ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
