--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,10 +1,10 @@
-<footer class="footer">
+<footer class="footer clearfix">
   <div class="container-fluid">
     <div class="row">
       <div class="container">
         <div class="row">
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title title--block">
+            <h2 class="title--block text--light-colored">
               Insights
             </h2>
             <ul>
@@ -19,7 +19,7 @@
             </li></ul>
           </div>
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title title--block">
+            <h2 class="title--block">
               Insights
             </h2>
             <ul>
@@ -34,7 +34,7 @@
             </li></ul>
           </div>
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title title--block">
+            <h2 class="title--block">
               Insights
             </h2>
             <ul>
@@ -49,7 +49,7 @@
             </li></ul>
           </div>
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title title--block">
+            <h2 class="title--block">
               Insights
             </h2>
             <ul>
