--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,14 +4,14 @@
   {% include head.html %}
 
   <body>
-    <div class="container-fluid">
-        <div class="row">
+    <div class="main container-fluid clearfix">
+        <div class="content row">
           {{ content }}
         </div>
     </div>
 
     {% include header.html %}
-    
+
     {% include footer.html %}
 
     <!-- JavaScript External -->
