--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,176 @@
-$body-bg: #2ea9be;
-$body-color: #fff;
+// 1. Colors
+//
+// Grayscale and brand colors for use across Bootstrap.
+
+$gray-dark:                 #333333 !default;
+$gray-light:                #808080 !default;
+$gray-lighter:              #666666 !default;
+$gray-lightest:             #999999 !default;
+$white:                     #ffffff !default;
+$black:                     #000000 !default;
+
+$brand-primary:             #e11b22 !default;
+$brand-success:             #5cb85c !default;
+$brand-info:                #5bc0de !default;
+$brand-warning:             #f0ad4e !default;
+$brand-danger:              #d9534f !default;
+$brand-inverse:             $gray-dark !default;
+
+// 3. Spacing
+//
+// Control the default styling of most Bootstrap elements by modifying these
+// variables. Mostly focused on spacing.
+// You can add more entries to the $spacers map, should you need more variation.
+
+$spacer:   1rem !default;
+$spacer-x: $spacer !default;
+$spacer-y: $spacer !default;
+$spacers: (
+  0: (
+    x: 0,
+    y: 0
+  ),
+  1: (
+    x: ($spacer-x * .25),
+    y: ($spacer-y * .25)
+  ),
+  2: (
+    x: ($spacer-x * .5),
+    y: ($spacer-y * .5)
+  ),
+  3: (
+    x: $spacer-x,
+    y: $spacer-y
+  ),
+  4: (
+    x: ($spacer-x * 1.5),
+    y: ($spacer-y * 1.5)
+  ),
+  5: (
+    x: ($spacer-x * 3),
+    y: ($spacer-y * 3)
+  )
+) !default;
+$border-width: 1px !default;
+
+// 4. Body
+//
+// Settings for the `<body>` element.
+
+$body-bg:       #fff !default;
+$body-color:    $gray-dark !default;
+$inverse-bg:    $black !default;
+$colored-bg:    $brand-primary !default;
+$inverse-color: $white !default;
+
+
+// 5. Links
+//
+// Style anchor elements.
+
+$link-color:            $brand-primary !default;
+$link-decoration:       none !default;
+$link-hover-color:      darken($link-color, 15%) !default;
+$link-hover-decoration: none !default;
+
+// 9. Fonts
+//
+// Font, line-height, and color for body text, headings, and more.
+
+$pf-thin: 'PF DIN Text Pro Thin';
+$pf-light: 'PF DIN Text Pro Light';
+
+$font-family-base:  $pf-light !default;
+
+// Pixel value used to responsively scale all typography. Applied to the `<html>` element.
+$font-size-root: 20px !default;
+
+$font-size-base: 1rem !default;
+$font-size-huge:   4.3rem !default;
+$font-size-lg:   3rem !default;
+$font-size-md:   1.25rem !default;
+$font-size-sm:   .9rem !default;
+$font-size-xs:   .8rem !default;
+
+$text-large: 1.45rem;
+$product-title: 1.25rem;
+$contact-title: 1.8rem;
+
+$font-weight-normal: normal !default;
+$font-weight-bold: normal !default;
+
+$font-weight-base: $font-weight-normal !default;
+$line-height-base: 1.6 !default;
+
+$font-size-h1: 1rem !default;
+$font-size-h2: 1rem !default;
+$font-size-h3: 1rem !default;
+$font-size-h4: 1rem !default;
+$font-size-h5: 1rem !default;
+$font-size-h6: 1rem !default;
+
+$headings-margin-bottom: 0 !default;
+$headings-font-family:   inherit !default;
+$headings-font-weight:   normal !default;
+$headings-line-height:   1 !default;
+$headings-color:         inherit !default;
+
+// 10. Components
+//
+// Define common padding and border radius sizes and more.
+
+$line-height-lg:         32 !default;
+$line-height-sm:         1.5 !default;
+
+$border-radius:          0 !default;
+$border-radius-lg:       0 !default;
+$border-radius-sm:       0 !default;
+
+$component-active-color: #fff !default;
+$component-active-bg:    $brand-primary !default;
+
+// 12. Buttons
+//
+// For each of Bootstrap's buttons, define text, background and border color.
+
+$btn-padding-x:                  2.25rem !default;
+$btn-padding-y:                  .8rem !default;
+$btn-line-height:                1 !default;
+$btn-box-shadow:                 inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075) !default;
+$btn-active-box-shadow:          inset 0 3px 5px rgba(0,0,0,.125) !default;
+
+$btn-primary-color:              #fff !default;
+$btn-primary-bg:                 $brand-primary !default;
+$btn-primary-border:             $btn-primary-bg !default;
+
+$btn-secondary-color:            #fff !default;
+$btn-secondary-bg:               $gray-dark !default;
+$btn-secondary-border:           $btn-secondary-bg !default;
+
+$btn-tertiary-color:             #fff !default;
+$btn-tertiary-bg:                $black !default;
+$btn-tertiary-border:            $btn-tertiary-bg !default;
+
+$btn-padding-x-sm:               .5rem !default;
+$btn-padding-y-sm:               .25rem !default;
+
+$btn-padding-x-lg:               1.5rem !default;
+$btn-padding-y-lg:               .75rem !default;
+
+$btn-block-spacing-y:            .5rem !default;
+$btn-toolbar-margin:             .5rem !default;
+
+// Allows for customizing button radius independently from global border radius
+$btn-border-radius:              $border-radius !default;
+$btn-border-radius-lg:           $border-radius-lg !default;
+$btn-border-radius-sm:           $border-radius-sm !default;
 
 @import "bootstrap/variables";
+
+// Container max width
+$container-normal: 630px;
+$container-medium: 560px;
+$container-small: 500px;
+
+$section-text-max-width: 420px;
+$content-wrapper-max-width: 1240px;
