--- a/src/assets/scss/bootstrap/bootstrap.scss
+++ b/src/assets/scss/bootstrap/bootstrap.scss
@@ -32,23 +32,23 @@
 @import "custom-forms";
 @import "nav";
 @import "navbar";
-@import "card";
-@import "breadcrumb";
-@import "pagination";
-@import "badge";
-@import "jumbotron";
-@import "alert";
-@import "progress";
-@import "media";
+//@import "card";
+//@import "breadcrumb";
+//@import "pagination";
+//@import "badge";
+//@import "jumbotron";
+//@import "alert";
+//@import "progress";
+//@import "media";
 @import "list-group";
 @import "responsive-embed";
-@import "close";
+//@import "close";
 
 // Components w/ JavaScript
-@import "modal";
-@import "tooltip";
-@import "popover";
-@import "carousel";
+//@import "modal";
+//@import "tooltip";
+//@import "popover";
+//@import "carousel";
 
 // Utility classes
 @import "utilities";
