--- a/src/assets/scss/components/slice/_slice.scss
+++ b/src/assets/scss/components/slice/_slice.scss
@@ -1,5 +1,10 @@
 .slice {
-  
+  padding-top: 150px;
+  padding-bottom: 150px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
   h2 {
     @extend .title--small;
   }
