--- a/src/assets/scss/layout/layout-two-column/_layout-two-column.scss
+++ b/src/assets/scss/layout/layout-two-column/_layout-two-column.scss
@@ -4,6 +4,8 @@
 
   // Flexbox.
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   .column {
     width: 50%;
@@ -37,14 +39,17 @@
       margin-bottom: auto;
     }
 
-
-
     &--full-width {
       width: 100%;
       clear: both
     }
   }
+
   &.odd {
+    .column:nth-child(2n) {
+      order: -1;
+    }
+    /*
     .column:nth-child(2n+1) {
       width: 50%;
      // float: right;
@@ -54,5 +59,6 @@
       width: 50%;
 //float: left;
     }
+    */
   }
 }
