--- a/src/_includes/company/revenues-evoution.html
+++ b/src/_includes/company/revenues-evoution.html
@@ -1,1 +1,4 @@
-revenues-evoution.html
+<div id="chart_div" style="width: 100%; height: 500px;"></div>
+<div id="donutchart_1" style="width: 900px; height: 500px;"></div>
+<div id="donutchart_2" style="width: 900px; height: 500px;"></div>
+<div id="donutchart_3" style="width: 900px; height: 500px;"></div>
