--- a/src/_includes/crown/silver-gold.html
+++ b/src/_includes/crown/silver-gold.html
@@ -1,3 +1,167 @@
 <div class="column column--full-width text--centered">
-  silver  and  gold
+  <ul class="tabs">
+		<li class="tab-link current" data-tab="tab-1">SILVER</li>
+		<li class="tab-link" data-tab="tab-2">GOLD</li>
+	</ul>
+  <!-- https://codyhouse.co/demo/image-comparison-slider/index.html -->
+  <div id="tab-1" class="tab-content current">
+    <figure class="cd-image-container">
+    	<img src="{{ site.url }}/images/caps-silver-etp.png" alt="ETP Silver" class="img-fluid">
+    	<span class="cd-image-label" data-type="original"><div class="title title--medium">ETP</div><div class="text text--small">Silver</div></span>
+
+    	<div class="cd-resize-img"> <!-- the resizable image on top -->
+    		<img src="{{ site.url }}/images/caps-silver-tfs.png" alt="TPS Silver" class="img-fluid">
+    		<span class="cd-image-label" data-type="modified"><div class="title title--medium">TPS</div><div class="text text--small">Silver</div></span>
+    	</div>
+
+    	<span class="cd-handle"></span> <!-- slider handle -->
+    </figure> <!-- cd-image-container -->
+  </div>
+  <div id="tab-2" class="tab-content">
+    <figure class="cd-image-container">
+    	<img src="{{ site.url }}/images/caps-gold-etp.png" alt="ETP Gold" class="img-fluid">
+    	<span class="cd-image-label" data-type="original"><div class="title title--medium">ETP</div><div class="text text--small">Gold</div></span>
+
+    	<div class="cd-resize-img"> <!-- the resizable image on top -->
+    		<img src="{{ site.url }}/images/caps-gold-tfs.png" alt="TPS Silver" class="img-fluid">
+    		<span class="cd-image-label" data-type="modified"><div class="title title--medium">TPS</div><div class="text text--small">Gold</div></span>
+    	</div>
+
+    	<span class="cd-handle"></span> <!-- slider handle -->
+    </figure> <!-- cd-image-container -->
+  </div>
 </div>
+
+<!-- Adding inline script --->
+<script>
+jQuery(document).ready(function($){
+  // Tabs
+  $('ul.tabs li').click(function(){
+		var tab_id = $(this).attr('data-tab');
+
+		$('ul.tabs li').removeClass('current');
+		$('.tab-content').removeClass('current');
+
+		$(this).addClass('current');
+		$("#"+tab_id).addClass('current');
+	});
+  
+  // Image slide.
+    var dragging = false,
+        scrolling = false,
+        resizing = false;
+    //cache jQuery objects
+    var imageComparisonContainers = $('.cd-image-container');
+    //check if the .cd-image-container is in the viewport
+    //if yes, animate it
+    //checkPosition(imageComparisonContainers);
+    $(window).on('scroll', function(){
+        if( !scrolling) {
+            scrolling =  true;
+            ( !window.requestAnimationFrame )
+                ? setTimeout(function(){checkPosition(imageComparisonContainers);}, 100)
+                : requestAnimationFrame(function(){checkPosition(imageComparisonContainers);});
+        }
+    });
+
+    //make the .cd-handle element draggable and modify .cd-resize-img width according to its position
+    imageComparisonContainers.each(function(){
+        var actual = $(this);
+        actual.addClass('is-visible');
+        drags(actual.find('.cd-handle'), actual.find('.cd-resize-img'), actual, actual.find('.cd-image-label[data-type="original"]'), actual.find('.cd-image-label[data-type="modified"]'));
+    });
+
+    //upadate images label visibility
+    $(window).on('resize', function(){
+        if( !resizing) {
+            resizing =  true;
+            ( !window.requestAnimationFrame )
+                ? setTimeout(function(){checkLabel(imageComparisonContainers);}, 100)
+                : requestAnimationFrame(function(){checkLabel(imageComparisonContainers);});
+        }
+    });
+
+    function checkPosition(container) {
+        container.each(function(){
+            var actualContainer = $(this);
+            if( $(window).scrollTop() + $(window).height()*0.5 > actualContainer.offset().top) {
+                actualContainer.addClass('is-visible');
+            }
+        });
+
+        scrolling = false;
+    }
+
+    function checkLabel(container) {
+        container.each(function(){
+            var actual = $(this);
+            updateLabel(actual.find('.cd-image-label[data-type="modified"]'), actual.find('.cd-resize-img'), 'left');
+            updateLabel(actual.find('.cd-image-label[data-type="original"]'), actual.find('.cd-resize-img'), 'right');
+        });
+
+        resizing = false;
+    }
+
+    //draggable funtionality - credits to http://css-tricks.com/snippets/jquery/draggable-without-jquery-ui/
+    function drags(dragElement, resizeElement, container, labelContainer, labelResizeElement) {
+        dragElement.on("mousedown vmousedown", function(e) {
+            dragElement.addClass('draggable');
+            resizeElement.addClass('resizable');
+
+            var dragWidth = dragElement.outerWidth(),
+                xPosition = dragElement.offset().left + dragWidth - e.pageX,
+                containerOffset = container.offset().left,
+                containerWidth = container.outerWidth(),
+                minLeft = containerOffset + 10,
+                maxLeft = containerOffset + containerWidth - dragWidth - 10;
+
+            dragElement.parents().on("mousemove vmousemove", function(e) {
+                if( !dragging) {
+                    dragging =  true;
+                    ( !window.requestAnimationFrame )
+                        ? setTimeout(function(){animateDraggedHandle(e, xPosition, dragWidth, minLeft, maxLeft, containerOffset, containerWidth, resizeElement, labelContainer, labelResizeElement);}, 100)
+                        : requestAnimationFrame(function(){animateDraggedHandle(e, xPosition, dragWidth, minLeft, maxLeft, containerOffset, containerWidth, resizeElement, labelContainer, labelResizeElement);});
+                }
+            }).on("mouseup vmouseup", function(e){
+                dragElement.removeClass('draggable');
+                resizeElement.removeClass('resizable');
+            });
+            e.preventDefault();
+        }).on("mouseup vmouseup", function(e) {
+            dragElement.removeClass('draggable');
+            resizeElement.removeClass('resizable');
+        });
+    }
+
+    function animateDraggedHandle(e, xPosition, dragWidth, minLeft, maxLeft, containerOffset, containerWidth, resizeElement, labelContainer, labelResizeElement) {
+        var leftValue = e.pageX + xPosition - dragWidth;
+        //constrain the draggable element to move inside his container
+        if(leftValue < minLeft ) {
+            leftValue = minLeft;
+        } else if ( leftValue > maxLeft) {
+            leftValue = maxLeft;
+        }
+
+        var widthValue = (leftValue + dragWidth/2 - containerOffset)*100/containerWidth+'%';
+
+        $('.draggable').css('left', widthValue).on("mouseup vmouseup", function() {
+            $(this).removeClass('draggable');
+            resizeElement.removeClass('resizable');
+        });
+
+        $('.resizable').css('width', widthValue);
+
+        updateLabel(labelResizeElement, resizeElement, 'left');
+        updateLabel(labelContainer, resizeElement, 'right');
+        dragging =  false;
+    }
+
+    function updateLabel(label, resizeElement, position) {
+        if(position == 'left') {
+            ( label.offset().left + label.outerWidth() < resizeElement.offset().left + resizeElement.outerWidth() ) ? label.removeClass('is-hidden') : label.addClass('is-hidden') ;
+        } else {
+            ( label.offset().left > resizeElement.offset().left + resizeElement.outerWidth() ) ? label.removeClass('is-hidden') : label.addClass('is-hidden') ;
+        }
+    }
+});
+</script>
