--- a/src/_includes/request-form.html
+++ b/src/_includes/request-form.html
@@ -11,7 +11,7 @@
 {% endfor %}
 <div id="form-response" class="js-hidden text"></div>
 <form accept-charset="UTF-8" id="request-form" action="{{ site.url }}/request.php" method="POST" class="on-brand-color request-form {{ formClass }}">
-  <div>
+  <div class="container">
     <div id="webform-component-name" class="js-floating-label form-item is-floating-label">
       <label for="edit-submitted-name">NAME </label>
       <input type="text" class="form-text" maxlength="128" size="60" value="" name="name" id="edit-submitted-name">
