--- a/src/assets/scss/components/contact/_contact.scss
+++ b/src/assets/scss/components/contact/_contact.scss
@@ -1,5 +1,10 @@
-.contact {
+// request form
+#request-form-content {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
 
+.contact {
   &__skype-number {
     font-size: 1.25rem;
     i {
