--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,6 +7,8 @@
   display: none !important;
 }
 
+@import "hamburgers/_sass/hamburgers/hamburgers";
+
 // Layouts
 @import "layout/layout-two-thirds/layout-two-thirds";
 @import "layout/layout-two-column/layout-two-column";
@@ -14,6 +16,7 @@
 
 // Misc
 @import "base/misc";
+@import "base/see-the-difference";
 
 
 @import "components/carousel/carousel";
