--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="row">
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title--block text--light-colored">
+            <h2 class="title title--block text--light-colored">
               Insights
             </h2>
             <ul class="list">
@@ -20,7 +20,7 @@
             </ul>
           </div>
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title--block text--light-colored">
+            <h2 class="title title--block text--light-colored">
               Location
             </h2>
             {% assign footerAddress = site.data.contact[langcode].contact.footerAddress %}
@@ -29,7 +29,7 @@
             <a class="footer__link footer__link--map" href="{{ googleMapLink }}"><i class="fa fa-map-marker" aria-hidden="true"></i>View Map</a>
           </div>
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title--block text--light-colored">
+            <h2 class="title title--block text--light-colored">
               Contact
             </h2>
             <div class="text">{{ site.data.contact[langcode].contact.callusNumber }}</div>
@@ -37,7 +37,7 @@
             <a class="footer__link footer__link--skype" href="skype:{{ site.data.contact[langcode].contact.skypeUsername }}?call"><i class="fa fa-skype" aria-hidden="true"></i>{{ site.data.contact[langcode].contact.skypetext }}</a>
           </div>
           <div class="footer__item col-sm-6 col-lg-3">
-            <h2 class="title--block text--light-colored">
+            <h2 class="title title--block text--light-colored">
               Follow Us
             </h2>
             <ul class="list">
