--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript">
       (function() {
           var path = '//easy.myfonts.net/v2/js?sid=173679(font-family=PF+DIN+Text+Pro+Thin)&sid=173743(font-family=PF+DIN+Text+Pro+Regular)&sid=173780(font-family=PF+DIN+Text+Pro+Light)&key=55L9f9LFVV',
@@ -36,6 +36,7 @@
 
 
   <!-- CSS -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="{{ site.url }}/assets/stylesheets/style.css">
 
   <!-- SEO -->
