--- a/src/_includes/item.html
+++ b/src/_includes/item.html
@@ -1,6 +1,6 @@
 {% assign node = include.param %}
 <div class="item column {{ node.variantClasses }} {{ node.layout }}">
-  <div class="image"><img class="img-fluid" src="{{ node.image }}"></div>
+  {% if (node.image) %}<div class="image"><img class="img-fluid" src="{{ node.image }}"></div>{% endif; %}
   <h2 class="title {{ node.title_variantClasses }}">{{ node.title }}</h2>
   <div class="text {{ node.text_variantClasses }}">{{ node.body | markdownify }}</div>
 </div>
