--- a/src/_includes/video.html
+++ b/src/_includes/video.html
@@ -1,4 +1,5 @@
 {% assign video = include.param %}
+<!-- Should replicate https://atomicobject.com/-->
 <div class="video text--centered {{include.variantClass}}">
   <video loop muted class="video__tag">
   </video>
@@ -12,6 +13,10 @@
 {{video.WatchVideoLinkText}}</a>
     {% endif %}
   </div>
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="24" height="52" viewBox="0 0 24 52" enable-background="new 0 0 24 52" xml:space="preserve" class="scroll-down">
+    <path class="scroll-down__mouse" fill="none" d="M134.5 135.5v2c1.1-1.5 1.8-3.4 1.8-5.5v-18.6c0-5.1-4.2-9.3-9.3-9.3 -5.1 0-9.3 4.2-9.3 9.3v18.6c0 2.1 0.7 4 1.8 5.5v-2H134.5zM125.7 109.3c0-0.7 0.6-1.3 1.3-1.3 0.7 0 1.3 0.6 1.3 1.3v6.7c0 0.7-0.6 1.3-1.3 1.3 -0.7 0-1.3-0.6-1.3-1.3V109.3zM127 117.3c0.7 0 1.3-0.6 1.3-1.3v-6.7c0-0.7-0.6-1.3-1.3-1.3 -0.7 0-1.3 0.6-1.3 1.3v6.7C125.7 116.7 126.3 117.3 127 117.3zM127 101.4c-6.6 0-12 5.4-12 12v18.6c0 3.8 1.8 7.1 4.5 9.3v-3.8c-1.1-1.5-1.8-3.5-1.8-5.5v-18.6c0-5.1 4.2-9.3 9.3-9.3 5.1 0 9.3 4.2 9.3 9.3v18.6c0 2.1-0.7 4-1.8 5.5v3.8c2.7-2.2 4.5-5.6 4.5-9.3v-18.6C139 106.7 133.6 101.4 127 101.4z"/>
+    <polygon class="scroll-down__arrow" fill="#FFFFFF" stroke="#FFFFFF" points="132.2 147.5 127.2 152.5 127.2 142.1 126.8 142.1 126.8 152.5 121.8 147.5 121.4 147.8 126.7 153 127 153.4 127.3 153 132.6 147.8 "/>
+  </svg>
 </div>
 
 <script src="{{site.url}}/assets/javascript/bideo.js"></script>
