--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,11 +4,9 @@
   {% include head.html %}
 
   <body>
-    <div class="main container-fluid clearfix">
-        <div class="content row">
-          {{ content }}
-        </div>
-    </div>
+
+  {{ content }}
+
     <!-- When on contact page the Request form is open -->
     {% if page.ref == 'contact' %}
       {% assign formClass = "" %}
@@ -25,13 +23,14 @@
     {% include footer.html %}
 
     <!-- JavaScript External -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
     <script src="//use.fontawesome.com/eb7ab6760b.js"></script>
     <!-- JavaScript Internal NEW-->
     <script async defer src="{{site.url}}/assets/javascript/jquery.form.min.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/contact-validation.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/menu.js"></script>
+    <script async defer src="{{site.url}}/assets/javascript/animate.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/floating-label.js"></script>
 
   </body>
