--- a/src/assets/scss/components/video/_video.scss
+++ b/src/assets/scss/components/video/_video.scss
@@ -1,7 +1,7 @@
 .video {
   @extend .text--light-colored;
   width: 100%;
-  height: 90vh;
+  height: 90%;
   position: relative;
   overflow: hidden;
 
@@ -83,5 +83,20 @@
         @extend .text--large;
       }
     }
+  }
+}
+
+// Scroll down svg
+.scroll-down {
+  position: absolute;;
+  bottom: 10%;
+  left: 50%;
+  z-index: 101;
+  &__mouse {
+    stroke: white;
+    fill: black;
+  }
+  &__arrow {
+
   }
 }
